service/external-dns/external-dns-nginx-service-and-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-clusterip-service
  labels:
    run: nginx
spec:
  type: ClusterIP
  selector:
    run: nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.kubebox.in
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
